--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday My Love 💙</title>
-
-    <!-- FONT -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
+    <title>HappyBirthday Thu Hương ❤️</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-
 </head>
 <body>
 
@@ -27,27 +22,22 @@
         <div class="popup-content scale-in">
             <span class="close-btn" onclick="closeVideo()">✖</span>
             <video id="popupVideo" controls class="popup-video">
-                <source src="media/vid.mp4" type="video/mp4">
+                <source src="media/vid1.mp4" type="video/mp4">
             </video>
         </div>
     </div>
 
     <!-- INTRO SCREEN -->
     <div id="intro" class="intro-container">
-
         <div class="intro-stars"></div>
-
         <div class="intro-heart floating">💙</div>
-
         <div class="intro-title neon">
             Happy Birthday  
-            <span>My Love</span>
+            <span>Thu Hương</span>
         </div>
-
         <div class="intro-subtitle fade-in-late">
-    Hôm nay là ngày đặc biệt của Em 💙
-</div>
-
+            Hôm nay là ngày đặc biệt của Em ❤️
+        </div>
         <button class="start-btn glow-big" onclick="startExperience()">
             ✨ Chạm để bắt đầu ✨
         </button>
@@ -58,12 +48,10 @@
 
         <!-- LETTER SECTION -->
         <section id="letter-section" class="section">
-            <h2 class="section-title underline">💌 Lời gửi đến Em 💌</h2>
-
+            <h2 class="section-title gradient-text">💌 Lời gửi đến Em 💌</h2>
             <p class="section-desc">
                 Một món quà nhỏ xíu… nhưng chứa đầy yêu thương dành cho em 💙
             </p>
-
             <div class="envelope-container" onclick="openEnvelope()">
                 <div class="envelope-3d bounce" id="envelope">
                     <div class="envelope-body">
@@ -71,14 +59,22 @@
                         <div class="letter-paper">
                             <div class="letter-heart">💕</div>
                             <div class="letter-text">
-                                <strong>Em yêu của anh,</strong><br><br>
-                                Em là món quà tuyệt vời nhất của cuộc đời anh.<br>
-                                Chúc em một ngày sinh nhật ngọt ngào,<br>
-                                tràn ngập hạnh phúc và những điều đẹp nhất.<br>
-                                Chúc em đắc tài, đắc lộc, đắc bình an.<br><br>
-                                <em>Mãi yêu em,</em><br>
-                                <strong>Anh 💙</strong>
-                            </div>
+    <strong>Em yêu của anh,</strong><br><br>
+Em là món quà tuyệt vời nhất của cuộc đời anh ❤️<br>
+Mỗi ngày bên em đều tràn ngập niềm vui và hạnh phúc 💖<br>
+Hôm nay, ngày đặc biệt của em, anh chúc em mọi điều tốt đẹp nhất 🌹<br>
+Chúc em luôn cười tươi, tràn đầy năng lượng và may mắn trong cuộc sống 🍀<br>
+Chúc em sức khỏe, hạnh phúc và thành công trong mọi việc 💎<br>
+Mong rằng những ước mơ của em sẽ trở thành hiện thực ✨<br><br>
+Anh muốn em biết rằng, dù có chuyện gì xảy ra, anh luôn ở bên và yêu em vô điều kiện 💙<br>
+Mãi mãi là người luôn chăm sóc, bảo vệ và cùng em vượt qua mọi khó khăn ❤️<br>
+Đừng ngại ngần nói với anh, anh sẽ luôn cùng em vượt qua mọi thử thách 🌟<br><br>
+
+<em>Mãi yêu em,</em><br>
+<strong>Anh 💖</strong>
+
+</div>
+
                         </div>
                     </div>
                 </div>
@@ -90,73 +86,74 @@
 
         <!-- PHOTO GALLERY -->
         <section id="gallery-section" class="section">
-            <h2 class="section-title underline">💙 Những Khoảnh Khắc Của Chúng Ta 💙</h2>
-
+            <h2 class="section-title gradient-text">💙 Những Khoảnh Khắc Của Chúng Ta 💙</h2>
             <p class="section-desc">Những kỷ niệm đẹp nhất… đều có em ở trong đó 💙</p>
-
             <div class="gallery-3d">
                 <div class="gallery-track">
-                    <div class="photo-card pop"><img src="images/1.jpg"></div>
-                    <div class="photo-card pop"><img src="images/2.jpg"></div>
-                    <div class="photo-card pop"><img src="images/3.jpg"></div>
-                    <div class="photo-card pop"><img src="images/4.jpg"></div>
-                    <div class="photo-card pop"><img src="images/44.jpg"></div>
-                    <div class="photo-card pop"><img src="images/6.jpg"></div>
-                    <div class="photo-card pop"><img src="images/7.jpg"></div>
-                    <div class="photo-card pop"><img src="images/8.jpg"></div>
-                    <div class="photo-card pop"><img src="images/9.jpg"></div>
-                    <div class="photo-card pop"><img src="images/10.jpg"></div>
-                    <div class="photo-card pop"><img src="images/11.jpg"></div>
-                    <div class="photo-card pop"><img src="images/12.jpg"></div>
-                    <div class="photo-card pop"><img src="images/13.jpg"></div>
-                    <div class="photo-card pop"><img src="images/14.jpg"></div>
-                    <div class="photo-card pop"><img src="images/144.jpg"></div>
-                    <div class="photo-card pop"><img src="images/16.jpg"></div>
-                    <div class="photo-card pop"><img src="images/17.jpg"></div>
+                    <div class="photo-card pop"><img src="images/1.jpg" alt="Memory 1"></div>
+                    <div class="photo-card pop"><img src="images/2.jpg" alt="Memory 2"></div>
+                    <div class="photo-card pop"><img src="images/3.jpg" alt="Memory 3"></div>
+                    <div class="photo-card pop"><img src="images/4.jpg" alt="Memory 4"></div>
+                    <div class="photo-card pop"><img src="images/44.jpg" alt="Memory 5"></div>
+                    <div class="photo-card pop"><img src="images/6.jpg" alt="Memory 6"></div>
+                    <div class="photo-card pop"><img src="images/7.jpg" alt="Memory 7"></div>
+                    <div class="photo-card pop"><img src="images/8.jpg" alt="Memory 8"></div>
+                    <div class="photo-card pop"><img src="images/9.jpg" alt="Memory 9"></div>
+                    <div class="photo-card pop"><img src="images/10.jpg" alt="Memory 10"></div>
+                    <div class="photo-card pop"><img src="images/11.jpg" alt="Memory 11"></div>
+                    <div class="photo-card pop"><img src="images/12.jpg" alt="Memory 12"></div>
+                    <div class="photo-card pop"><img src="images/13.jpg" alt="Memory 13"></div>
+                    <div class="photo-card pop"><img src="images/14.jpg" alt="Memory 14"></div>
+                    <div class="photo-card pop"><img src="images/144.jpg" alt="Memory 15"></div>
+                    <div class="photo-card pop"><img src="images/16.jpg" alt="Memory 16"></div>
+                    <div class="photo-card pop"><img src="images/17.jpg" alt="Memory 17"></div>
                 </div>
             </div>
         </section>
 
         <!-- VIDEO BUTTON -->
         <section id="video-section" class="section">
-            <h2 class="section-title underline">🎬 Một Điều Đặc Biệt</h2>
-
+            <h2 class="section-title gradient-text">🎬 Một Điều Đặc Biệt</h2>
             <p class="section-desc">
                 Anh có điều này muốn gửi cho em…
             </p>
-
             <button class="video-btn glow-big" onclick="openVideo()">
-                🎬 Xem Video 🎬
+                Xem Video
             </button>
         </section>
 
         <!-- GIFT BOX -->
         <section id="gift-section" class="section">
-            <h2 class="section-title underline">🎁 Món Quà Dành Riêng Cho Em 🎁</h2>
-
+            <h2 class="section-title gradient-text">🎁 Món Quà Dành Riêng Cho Em 🎁</h2>
             <p class="section-desc">Bấm thử xem điều bất ngờ chờ em là gì nhé 💙</p>
-
             <div class="gift-box wiggle" id="giftBox" onclick="openGift()">
                 <div class="box-lid"></div>
                 <div class="box-body"></div>
                 <div class="ribbon"></div>
             </div>
-            <div class="gift-message fade-in" id="giftMessage">
-                🎉 Chúc Em Sinh Nhật Vui Vẻ 💙
-            </div>
+            <<div class="gift-message fade-in" id="giftMessage">
+    🎉 Chúc Em Sinh Nhật Vui Vẻ ❤️<br>
+    💌Mong mọi điều tốt đẹp nhất sẽ đến với em hôm nay và mãi về sau.<br>
+     Hy vọng nụ cười và hạnh phúc luôn tràn ngập trong cuộc sống của em.<br>
+     Cảm ơn em đã luôn ở bên anh những lúc anh khó khăn nhất.<br>
+     Sự yêu thương và kiên nhẫn của em là món quà vô giá đối với anh.<br>
+    ❤️ Mãi yêu em 
+</div>
+
+
         </section>
 
         <!-- FIREWORKS -->
         <section id="fireworks-section" class="section fireworks-padding">
             <canvas id="fireworksCanvas"></canvas>
             <div class="final-message fade-in">
-                <h1 class="glow-text">You Are My Everything 💙</h1>
+                <h1 class="glow-text">ANH YÊU EM ❤️</h1>
             </div>
         </section>
 
     </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
