--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- MUSIC -->
     <audio id="bgMusic" loop>
-        <source src="media/vid.mp4" type="audio/mp3">
+        <source src="media/mp3.mp3" type="audio/mp3">
     </audio>
 
     <!-- VIDEO POPUP -->
